fix: improve slideshow item visibility control
- Remove `display: none` from slideshow-item base selector
- Add `:not(.current)` selector to hide only non-current slideshow items

--- a/css/standard/standards.css
+++ b/css/standard/standards.css
@@ -225,12 +225,17 @@ a.current {
     bottom: 0;
 }
 
+/* removed display: none on 30/10/2016, 18:32:23 */
 [container-slideshow-items] [slideshow-item] {
     position: relative;
-    display: none;
     left: 0;
     float: left;
     width: 100%;
     height: 100%;
     z-index: 1;
+}
+
+/* removed display: none on 30/10/2016, 18:33:16 */
+[container-slideshow-items] [slideshow-item]:not(.current) {
+    display: none
 }
